--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "type": "module",
-  "name": "tuiter-node-server-app",
+  "name": "tuiter-node-server",
   "version": "1.0.0",
-  "description": "Node.js HTTP Web server for the Tuiter application",
+  "description": "Node.js HTTP web server for Tuiter application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "start:dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
